fix: create pink-tools dir in ci

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Test run
         run: |
+          sudo mkdir -p /Users/pink-tools
           brew install coreutils
           gtimeout 5 ./pink-voice-darwin-arm64 2>&1 | tee output.log || true
           grep -q "hotkey registered" output.log
@@ -52,6 +53,7 @@ jobs:
 
       - name: Test run
         run: |
+          sudo mkdir -p /home/pink-tools
           xvfb-run timeout 5 ./pink-voice-linux-amd64 2>&1 | tee output.log || true
           grep -q "hotkey registered" output.log
 
@@ -77,6 +79,7 @@ jobs:
       - name: Test run
         shell: bash
         run: |
+          mkdir -p /c/Users/pink-tools
           timeout 5 ./pink-voice-windows-amd64.exe 2>&1 | tee output.log || true
           grep -q "hotkey registered" output.log
 
