fix: add shell bash for windows ldflags

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,6 +74,7 @@ jobs:
           cache: false
 
       - name: Build
+        shell: bash
         run: go build -ldflags="-X main.version=${GITHUB_REF_NAME#v}" -o pink-voice-windows-amd64.exe .
 
       - name: Test run
